fix(styles/global.css): overflow issue

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -854,14 +854,14 @@ input:focus {
   border: 2px solid #7c689b;
   border-radius: 10px;
   padding: 30px 30px 15px 30px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .course--title {
-  overflow: scroll;
+  overflow: auto;
 }
 #title {
-  overflow: scroll;
+  overflow: auto;
 }
 
 /** Media Query */
